Fixed PCB code and cleaned up the memory class

--- a/alanbbos.css
+++ b/alanbbos.css
@@ -1,7 +1,7 @@
 /* alanbbos.css */
 
 body {
-   background: #909193 url(images/cat1d.png) repeat;
+   background: #909193 url(images/business-cat.jpg) repeat;
    font-family: Helvetica, Verdana, Arial, sans-serif;
 	font-size: 12pt;
 	font-weight: normal;
