--- a/noose.css
+++ b/noose.css
@@ -38,6 +38,7 @@ h3 {
 }
 
 #taMem {
+	background-color: #333333;
 	color: white;
 	font-family: Courier New, serif, monospace;
 	font-size: 10pt;
@@ -45,6 +46,7 @@ h3 {
 }
 
 #taCPU {
+	background-color: #333333;
 	color: white;
 	font-family: Courier New, serif, monospace;
 	font-size: 10pt;
@@ -52,6 +54,7 @@ h3 {
 }
 
 #taLog {
+	background-color: #333333;
 	color: white;
 	font-family: Courier New, serif, monospace;
 	font-size: 10pt;
@@ -59,6 +62,7 @@ h3 {
 }
 
 #taProgramInput {
+	background-color: #333333;
 	color: white;
 	font-family: Courier New, serif, monospace;
 	font-size: 10pt;
