--- a/noose.css
+++ b/noose.css
@@ -1,7 +1,7 @@
 /* noose.css */
 
 body {
-   background: #909193 url(images/business-cat.jpg) repeat;
+   background: #909193 url(images/keyboard-cat-blue2.png) repeat;
 	color: white;
    font-family: Trebuchet, sans-serif;
 	font-size: 14pt;
@@ -32,8 +32,8 @@ h3 {
 }
 
 #display {
-	background-color:#DFDBC3;
-	border: 2px solid red; 
+	/*background-color:#DFDBC3;*/
+	border: 2px solid aqua; 
 	cursor: default;
 }
 
